force-app/main/default/objects/MPIntegrationSetting__mdt/fields/MPApi_Path_2__c.field-meta.xml
<CustomField>
    <fullName>MPApi_Path_2__c</fullName>
    <description>Es un path adicioinal. Para concaterse en la URL</description>
    <label>Api Path 2</label>
    <length>50</length>
    <type>Text</type>
</CustomField>