force-app/main/default/objects/MPIntegrationSetting__mdt/fields/MPApi_Path__c.field-meta.xml
<CustomField>
    <fullName>MPApi_Path__c</fullName>
    <description>Ruta de la API, despues de su raíz.</description>
    <label>Api Path</label>
    <length>255</length>
    <type>Text</type>
</CustomField>