force-app/main/default/objects/MPIntegrationSetting__mdt/fields/MPMaximumRetries__c.field-meta.xml
<CustomField>
    <fullName>MPMaximumRetries__c</fullName>
    <description>Numero máximo de re-intentos permitidos.</description>
    <inlineHelpText>Numero máximo de re-intentos permitidos.</inlineHelpText>
    <label>Número máximo de reintentos</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>