force-app/main/default/objects/MPIntegrationSetting__mdt/fields/MPMethod__c.field-meta.xml
<CustomField>
    <fullName>MPMethod__c</fullName>
    <label>Método</label>
    <length>20</length>
    <type>Text</type>
</CustomField>