force-app/main/default/objects/MPIntegrationSetting__mdt/fields/MPNamedCredential__c.field-meta.xml
<CustomField>
    <fullName>MPNamedCredential__c</fullName>
    <description>Api name del Named Credential que se utiliza en la integración.</description>
    <label>Named Credential</label>
    <length>50</length>
    <type>Text</type>
</CustomField>