force-app/main/default/objects/MPIntegrationSetting__mdt/fields/MPRetry__c.field-meta.xml
<CustomField>
    <fullName>MPRetry__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Permitir o no re-intentos.</description>
    <inlineHelpText>Permitir o no re-intentos.</inlineHelpText>
    <label>Habilitar reintentos</label>
    <type>Checkbox</type>
</CustomField>