force-app/main/default/objects/MPIntegrationSetting__mdt/fields/MPSecondsBetweenRetries__c.field-meta.xml
<CustomField>
    <fullName>MPSecondsBetweenRetries__c</fullName>
    <label>Segundos entre reintentos</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>