force-app/main/default/objects/MPIntegrationSetting__mdt/fields/MPSuccessfulHttpCodes__c.field-meta.xml
<CustomField>
    <fullName>MPSuccessfulHttpCodes__c</fullName>
    <description>Lista de códigos http que se deben tomar como éxito. Separe los códigos con punto y coma. Ejemplo: &apos;200;201&apos;</description>
    <inlineHelpText>Lista de códigos http que se deben tomar como éxito. Separe los códigos con punto y coma. Ejemplo: &apos;200;201&apos;</inlineHelpText>
    <label>Códigos http exitosos</label>
    <length>255</length>
    <type>Text</type>
</CustomField>