force-app/main/default/objects/MPIntegrationSetting__mdt/fields/MPTimeout__c.field-meta.xml
<CustomField>
    <fullName>MPTimeout__c</fullName>
    <description>Tiempo maximo de respuesta de una petición. Valor en Milisegundos.</description>
    <inlineHelpText>Tiempo maximo de respuesta de una petición. Valor en Milisegundos.</inlineHelpText>
    <label>Time-out</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>