force-app/main/default/objects/MPIntegrationSetting__mdt/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Tipo</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Inbound</fullName>
                <label>Entrante</label>
            </value>
            <value>
                <fullName>Outbound</fullName>
                <label>Saliente</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>